<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#FFFFFF"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="236dp"
            android:layout_height="236dp"
            android:layout_gravity="center"
            android:src="@drawable/leaf" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/farmer_s_pride"
            android:textColor="@color/black"
            android:elevation="15dp"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_phone_sign_in"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/fui_ic_phone_white_24dp"
            android:drawableTint="@color/black"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/sign_in_with_phone"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:elevation="15dp"
            app:cornerRadius="15dp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_google_sign_in"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawableLeft="@drawable/fui_ic_googleg_color_24dp"
            android:fontFamily="@font/alegreya_sc"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:elevation="15dp"
            app:cornerRadius="15dp" />

    </LinearLayout>


</RelativeLayout>


    <!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--    xmlns:tools="http://schemas.android.com/tools"-->
    <!--    android:layout_width="match_parent"-->
    <!--    android:layout_height="match_parent"-->
    <!--    android:background="@drawable/bg_splash"-->
    <!--    android:gravity="center_horizontal"-->
    <!--    android:padding="16dp"-->
    <!--    tools:context=".LoginActivity">-->

    <!--    <LinearLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:gravity="center_horizontal"-->
    <!--        android:orientation="vertical">-->


    <!--        <ImageView-->
    <!--            android:layout_marginTop="30dp"-->
    <!--            android:layout_width="300dp"-->
    <!--            android:layout_height="300dp"-->
    <!--            android:src="@drawable/leaf"/>-->

    <!--        <LinearLayout-->
    <!--            android:layout_weight="1"-->
    <!--            android:padding="18dp"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:orientation="vertical">-->

    <!--            <Button-->
    <!--                android:id="@+id/btnloginwithphone"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
    <!--                android:text="@string/sign_in_with_phone"-->
    <!--                android:textColor="@color/black"-->
    <!--                android:textStyle="bold"/>-->

    <!--            <Button-->
    <!--                android:id="@+id/btnloginwithgoogle"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="wrap_content"-->
    <!--                android:layout_marginTop="15dp"-->
    <!--                style="@style/Widget.MaterialComponents.Button.OutlinedButton"-->
    <!--                android:text="@string/sign_in_with_google"-->
    <!--                android:textColor="@color/black"-->
    <!--                android:textStyle="bold"/>-->

    <!--        </LinearLayout>-->


    <!--    </LinearLayout>-->

    <!--</RelativeLayout>-->